--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous">
     <script src="captcha.js"></script>
 	
-    <title>Login Page</title>
+    <title>Signup Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
