Updated Landing Page
Main_content + Footer

--- a/index.html
+++ b/index.html
@@ -43,11 +43,47 @@
     </section>
 
     <section class="body-one">
-
+		<div class="text-box-one"><br><br><br>
+			<span id="four">SalinWiki is not just your ordinary Wiki Site.</span><br><br>
+			<p id="five"> Aside from being able to seach our dictionary, we<br> also have the following features to make translation<br> of Philippine languages a lot more immersive.</p><br><br><br>
+		</div>
+		
+			<div class="main-body">
+			<img src="rss/images/bentobox.png" class="main-content">
+		
+		</div>
     </section>
 
     <section class="body-two">
-
+	
+		<div class="sub-body">
+		<img src="rss/images/users_icon.png" class="users-icon">
+	
+		</div>
+		
+		<div class="text-box-two">
+		<span id="six">HELP US BREAK EVERY<br>LANGUAGE BARRIER,<br>ONE TRANSLATION AT A TIME!</span><br><br>
+		<span id="seven">Salin</span><span id="eight">Wiki's</span><span id="seven"> is to ensure that every Filipino can engage in meaningful<br> interactions without hindrance caused by differing languages.</span>
+		<p id="nine"> Join us now by signing up for an account and contribute to our cause today!</p>
+		</div>
+		
     </section>
+	
+	<section class="body-three">
+	
+	<div class="footer-container">
+		<img src="rss/images/SalinWiki logo with logotype.png" class="footer-logo">
+		
+		<img src="rss/images/Pink Shark Icon.png" class="pinkshark-logo">
+		
+		<img src="rss/images/language_selector.png" class="language-selector">
+	
+	</div>	
+	
+	
+	<br><p class="copy-right">© 2023 Kalimbahing Pating (Pink Shark). All rights reserved.</p>
+	
+	</section>
+	
 </body>
 </html>
